--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>UK Parliament</title>
   <link rel="stylesheet" href="css/design-system.css?v=1.0">
   <link rel="stylesheet" href="css/businesspapers.css">
+  <link rel="stylesheet" href="css/custom.css">
 </head>
 
 <body class="brand-commons">
@@ -55,22 +56,48 @@
             <ul>
               <li>New PDF files may include in-development review comments.</li>
             </ul>
-
-          <table class="table table-bordered table-responsive-md">  
-            <thead class="thead-light">    
-              <tr><th scope="col">Date</th><th scope="col">New PDF design</th><th scope="col">Old PDF design</th><th scope="col">New HTML</th><th scope="col">Current online HTML</th></tr></thead>
-              <tbody>
-                <tr><td>2024-01-17</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:5d287df0-f901-425c-bb31-0af27a389758?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/84231/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
-                <tr><td>2024-01-30</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:53d83784-5744-4d10-95fe-ed8e8981d55c?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/84685/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
-                <tr><td>2024-02-05</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:eccf39a4-21cf-4423-a1b4-9b4154f1cd44?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/84789/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
-                <tr><td>2024-02-19</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:101418e6-d014-4a56-a600-b70e239b76a3?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/85279/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
-                <tr><td>2024-03-05</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:77ff73c5-dccb-41e6-b104-f6f1bf0a1049?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/85279/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
-                <tr><td>2024-03-20</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:02a16184-db06-43e1-af8c-ce7f5b96e4f3?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/86311/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
-                <tr><td>2024-04-19</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:a9d165b2-9810-490f-abcd-cbb2aec29914?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/86837/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
-                <tr><td>2024-04-23</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:5dc64c7a-0950-4cc3-a78b-4cb75a1ec848?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/86936/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
-                <tr><td>2024-05-08</a><br></td><td><a href="">WIP</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/87332/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
-                <tr><td>2024-05-15</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:2c1f1bab-91e6-4a7f-9f62-bd17de05ad47?view=published ">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/87600/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
-                </tbody></table></div>
+            <details>
+              <summary><b>Effectives</b>:<span class="icon"> ⬇️</span></summary>
+              <p>
+                <table class="table table-bordered table-responsive-md">  
+                  <thead class="thead-light">    
+                    <tr><th scope="col">Date</th><th scope="col">New PDF design</th><th scope="col">Old PDF design</th><th scope="col">New HTML</th><th scope="col">Current online HTML</th></tr></thead>
+                    <tbody>
+                      <tr><td>2024-01-17</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:5d287df0-f901-425c-bb31-0af27a389758?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/84231/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
+                      <tr><td>2024-01-30</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:53d83784-5744-4d10-95fe-ed8e8981d55c?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/84685/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
+                      <tr><td>2024-02-05</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:eccf39a4-21cf-4423-a1b4-9b4154f1cd44?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/84789/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
+                      <tr><td>2024-02-19</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:101418e6-d014-4a56-a600-b70e239b76a3?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/85279/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
+                      <tr><td>2024-03-05</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:77ff73c5-dccb-41e6-b104-f6f1bf0a1049?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/85279/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
+                      <tr><td>2024-03-20</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:02a16184-db06-43e1-af8c-ce7f5b96e4f3?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/86311/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
+                      <tr><td>2024-04-19</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:a9d165b2-9810-490f-abcd-cbb2aec29914?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/86837/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
+                      <tr><td>2024-04-23</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:5dc64c7a-0950-4cc3-a78b-4cb75a1ec848?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/86936/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
+                      <tr><td>2024-05-08</a><br></td><td><a href="">WIP</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/87332/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
+                      <tr><td>2024-05-15</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:2c1f1bab-91e6-4a7f-9f62-bd17de05ad47?view=published ">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/87600/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
+                      </tbody></table>
+              </p>
+              </details>
+            </div>
+            <hr>
+            <div>
+              <details>
+              <summary><b>Committees</b>:<span class="icon"> ⬇️</span></summary>
+              <p>
+                <table class="table table-bordered table-responsive-md">  
+                  <thead class="thead-light">    
+                    <tr><th scope="col">Date</th><th scope="col">New PDF design</th><th scope="col">Old PDF design</th><th scope="col">New HTML</th><th scope="col">Current online HTML</th></tr></thead>
+                    <tbody>
+                      <tr><td>2024-05-13</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:e5199889-6902-4f5b-974a-c0d41b617a4e?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/87566/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
+                      <tr><td>2024-05-15</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:485c4f9a-38ce-4632-96cf-bdfcc1c4e7df?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/87600/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
+                      <tr><td>2024-05-16</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:3287b1c5-9f7e-43f2-ba1c-b1a6b90942bb?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/87640/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
+                      <tr><td>2024-05-20</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:5db74831-86da-4756-b03e-fcffdd3f13a8?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/87865/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
+                      <tr><td>2024-05-21</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:e7524a1e-2a4d-4b23-9a35-56f7f2e4765d?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/87864/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
+                      <tr><td>2024-05-22</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:197b3d0b-6fe9-4e18-9d4c-e24361682d6e?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/87906/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
+                      <tr><td>2024-05-23</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:6c8cb382-91df-47fb-82b1-3836dfe08ac1?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/87980/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr> 
+                      </tbody></table>
+              </p>
+              </details>
+            </div>
+            <hr>
           <div id="vnp" class="section">
             <h2 id="heading-2">Votes and Proceedings</h2>
             <p>In development</p>
