--- a/index.html
+++ b/index.html
@@ -98,6 +98,22 @@
               </details>
             </div>
             <hr>
+            <div>
+              <details>
+              <summary><b>Announcements</b>:<span class="icon"> ⬇️</span></summary>
+              <p>
+                <table class="table table-bordered table-responsive-md">  
+                  <thead class="thead-light">    
+                    <tr><th scope="col">Date</th><th scope="col">New PDF design</th><th scope="col">Old PDF design</th><th scope="col">New HTML</th><th scope="col">Current online HTML</th></tr></thead>
+                    <tbody>
+                      <tr><td>2024-02-02</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:5536a38c-7636-4c20-a703-af2446c7305a?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/84787/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
+                      <tr><td>2024-02-07</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:74d775cc-aebc-421e-add0-fd7184c67518?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/84952/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
+                      <tr><td>2024-04-25</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:63122d8c-970d-4205-ba35-b7e87d43396c?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/87011/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
+                      </tbody></table>
+              </p>
+              </details>
+            </div>
+            <hr>
           <div id="vnp" class="section">
             <h2 id="heading-2">Votes and Proceedings</h2>
             <p>In development</p>
