--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             <details>
               <summary><b>Effectives</b>:<span class="icon"> ⬇️</span></summary>
               <p>
-                <table class="table table-bordered table-responsive-md">  
-                  <thead class="thead-light">    
+                <table class="table table-bordered table-responsive-md">
+                  <thead class="thead-light">
                     <tr><th scope="col">Date</th><th scope="col">New PDF design</th><th scope="col">Old PDF design</th><th scope="col">New HTML</th><th scope="col">Current online HTML</th></tr></thead>
                     <tbody>
                       <tr><td>2024-01-17</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:5d287df0-f901-425c-bb31-0af27a389758?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/84231/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
@@ -82,8 +82,8 @@
               <details>
               <summary><b>Committees</b>:<span class="icon"> ⬇️</span></summary>
               <p>
-                <table class="table table-bordered table-responsive-md">  
-                  <thead class="thead-light">    
+                <table class="table table-bordered table-responsive-md">
+                  <thead class="thead-light">
                     <tr><th scope="col">Date</th><th scope="col">New PDF design</th><th scope="col">Old PDF design</th><th scope="col">New HTML</th><th scope="col">Current online HTML</th></tr></thead>
                     <tbody>
                       <tr><td>2024-05-13</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:e5199889-6902-4f5b-974a-c0d41b617a4e?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/87566/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
@@ -92,7 +92,7 @@
                       <tr><td>2024-05-20</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:5db74831-86da-4756-b03e-fcffdd3f13a8?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/87865/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
                       <tr><td>2024-05-21</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:e7524a1e-2a4d-4b23-9a35-56f7f2e4765d?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/87864/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
                       <tr><td>2024-05-22</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:197b3d0b-6fe9-4e18-9d4c-e24361682d6e?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/87906/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
-                      <tr><td>2024-05-23</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:6c8cb382-91df-47fb-82b1-3836dfe08ac1?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/87980/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr> 
+                      <tr><td>2024-05-23</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:6c8cb382-91df-47fb-82b1-3836dfe08ac1?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/87980/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
                       </tbody></table>
               </p>
               </details>
@@ -102,18 +102,17 @@
               <details>
               <summary><b>Announcements</b>:<span class="icon"> ⬇️</span></summary>
               <p>
-                <table class="table table-bordered table-responsive-md">  
-                  <thead class="thead-light">    
+                <table class="table table-bordered table-responsive-md">
+                  <thead class="thead-light">
                     <tr><th scope="col">Date</th><th scope="col">New PDF design</th><th scope="col">Old PDF design</th><th scope="col">New HTML</th><th scope="col">Current online HTML</th></tr></thead>
                     <tbody>
                       <tr><td>2024-02-02</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:5536a38c-7636-4c20-a703-af2446c7305a?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/84787/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
                       <tr><td>2024-02-07</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:74d775cc-aebc-421e-add0-fd7184c67518?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/84952/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
-                      <tr><td>2024-04-25</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:63122d8c-970d-4205-ba35-b7e87d43396c?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/87011/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
+                      <tr><td>2024-04-25</a><br></td><td><a href="https://assets.adobe.com/id/urn:aaid:sc:US:63122d8c-970d-4205-ba35-b7e87d43396c?view=published">PDF link</a><br></td><td><a href="https://commonsbusiness.parliament.uk/Document/87011/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td></tr>
                       </tbody></table>
               </p>
               </details>
             </div>
-            <hr>
           <div id="vnp" class="section">
             <h2 id="heading-2">Votes and Proceedings</h2>
             <p>In development</p>
@@ -133,9 +132,20 @@
           <table class="table table-bordered table-responsive-md">  <thead class="thead-light">    <tr><th scope="col">Date</th>    <th scope="col">New HTML files</th>    <th scope="col">Original HTML files</th></tr>  </thead>  <tbody><tr><td>Tuesday 21 July 2020</td><td><a href="edm200721.html">edm200721.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/200721e01.html">200721e01.html</a><br></td></tr><tr><td>Monday 20 July 2020</td><td><a href="edm200720.html">edm200720.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/200720e01.html">200720e01.html</a><br></td></tr><tr><td>Thursday 16 July 2020</td><td><a href="edm200716.html">edm200716.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/200716e01.html">200716e01.html</a><br></td></tr><tr><td>Wednesday 15 July 2020</td><td><a href="edm200715.html">edm200715.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/200715e01.html">200715e01.html</a><br></td></tr><tr><td>Tuesday 14 July 2020</td><td><a href="edm200714.html">edm200714.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/200714e01.html">200714e01.html</a><br></td></tr><tr><td>Monday 13 July 2020</td><td><a href="edm200713.html">edm200713.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/200713e01.html">200713e01.html</a><br></td></tr><tr><td>Thursday 09 July 2020</td><td><a href="edm200709.html">edm200709.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/200709e01.html">200709e01.html</a><br></td></tr><tr><td>Wednesday 08 July 2020</td><td><a href="edm200708.html">edm200708.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/200708e01.html">200708e01.html</a><br></td></tr><tr><td>Tuesday 07 July 2020</td><td><a href="edm200707.html">edm200707.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/200707e01.html">200707e01.html</a><br></td></tr><tr><td>Monday 06 July 2020</td><td><a href="edm200706.html">edm200706.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/200706e01.html">200706e01.html</a><br></td></tr></tbody></table> --></br></div>
           <div id="fdo" class="section">
             <h2 id="heading-5">Future Day Orals</h2>
-            <p>In development</p>
+            <p></p>
+
+            <table class="table table-bordered table-responsive-md">
+              <thead class="thead-light">
+                <tr><th scope="col">Date</th><th scope="col">New PDF design</th><th scope="col">Old PDF design</th><th scope="col">New HTML</th><th scope="col">Current online HTML</th></tr>
+              </thead>
+              <tbody>
+                <tr><td>2024-06-05</td><td><a target="_blank" href="https://assets.adobe.com/id/urn:aaid:sc:US:508a1e22-7257-42ac-a6e9-ae9b07138495?view=published">PDF link</a><br></td><td><a target="_blank" href="https://commonsbusiness.parliament.uk/Document/87908/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
+                <tr><td>2024-06-14</td><td><a target="_blank" href="https://assets.adobe.com/id/urn:aaid:sc:US:49ebfc81-aad3-40e2-ac55-06144a509b3e?view=published">PDF link</a><br></td><td><a target="_blank" href="https://commonsbusiness.parliament.uk/Document/87585/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
+              </tbody>
+            </table>
+
              <!--
-          <table class="table table-bordered table-responsive-md">  <thead class="thead-light">    <tr><th scope="col">Date</th>    <th scope="col">New HTML files</th>    <th scope="col">Original HTML files</th></tr>  </thead>  <tbody><tr><td>Tuesday 21 July 2020</td><td><a href="fdo200721.html">fdo200721.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/futoral.htm">futoral.htm</a><br></td></tr><tr><td>Monday 20 July 2020</td><td><a href="fdo200720.html">fdo200720.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/"></a><br></td></tr><tr><td>Friday 17 July 2020</td><td><a href="fdo200717.html">fdo200717.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/"></a><br></td></tr><tr><td>Thursday 16 July 2020</td><td><a href="fdo200716.html">fdo200716.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/"></a><br></td></tr><tr><td>Wednesday 15 July 2020</td><td><a href="fdo200715.html">fdo200715.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/"></a><br></td></tr><tr><td>Tuesday 14 July 2020</td><td><a href="fdo200714.html">fdo200714.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/"></a><br></td></tr></tbody></table> --></br></div>
+          <table class="table table-bordered table-responsive-md">  <thead class="thead-light">    <tr><th scope="col">Date</th>    <th scope="col">New HTML files</th>    <th scope="col">Original HTML files</th></tr>  </thead>  <tbody><tr><td>Tuesday 21 July 2020</td><td><a href="fdo200721.html">fdo200721.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/futoral.htm">futoral.htm</a><br></td></tr><tr><td>Monday 20 July 2020</td><td><a href="fdo200720.html">fdo200720.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/"></a><br></td></tr><tr><td>Friday 17 July 2020</td><td><a href="fdo200717.html">fdo200717.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/"></a><br></td></tr><tr><td>Thursday 16 July 2020</td><td><a href="fdo200716.html">fdo200716.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/"></a><br></td></tr><tr><td>Wednesday 15 July 2020</td><td><a href="fdo200715.html">fdo200715.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/"></a><br></td></tr><tr><td>Tuesday 14 July 2020</td><td><a href="fdo200714.html">fdo200714.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/"></a><br></td></tr></tbody></table> --></div>
         </div>
       </div>
     </article>
