Draft script to generate new tables.

--- a/demo/index.html
+++ b/demo/index.html
@@ -59,7 +59,7 @@
             <details>
               <summary><b>Effectives</b>:<span class="icon"> ⬇️</span></summary>
               <p>
-                <table class="table table-bordered table-responsive-md">
+                <table class="table table-bordered table-responsive-md" id="effectives">
                   <thead class="thead-light">
                     <tr><th scope="col">Date</th><th scope="col">New PDF design</th><th scope="col">Old PDF design</th><th scope="col">New HTML</th><th scope="col">Current online HTML</th></tr></thead>
                     <tbody>
@@ -82,7 +82,7 @@
               <details>
               <summary><b>Committees</b>:<span class="icon"> ⬇️</span></summary>
               <p>
-                <table class="table table-bordered table-responsive-md">
+                <table class="table table-bordered table-responsive-md" id="committees">
                   <thead class="thead-light">
                     <tr><th scope="col">Date</th><th scope="col">New PDF design</th><th scope="col">Old PDF design</th><th scope="col">New HTML</th><th scope="col">Current online HTML</th></tr></thead>
                     <tbody>
@@ -102,7 +102,7 @@
               <details>
               <summary><b>Announcements</b>:<span class="icon"> ⬇️</span></summary>
               <p>
-                <table class="table table-bordered table-responsive-md">
+                <table class="table table-bordered table-responsive-md" id="announcements">
                   <thead class="thead-light">
                     <tr><th scope="col">Date</th><th scope="col">New PDF design</th><th scope="col">Old PDF design</th><th scope="col">New HTML</th><th scope="col">Current online HTML</th></tr></thead>
                     <tbody>
@@ -134,7 +134,7 @@
             <h2 id="heading-5">Future Day Orals</h2>
             <p></p>
 
-            <table class="table table-bordered table-responsive-md">
+            <table class="table table-bordered table-responsive-md" id="FDOs">
               <thead class="thead-light">
                 <tr><th scope="col">Date</th><th scope="col">New PDF design</th><th scope="col">Old PDF design</th><th scope="col">New HTML</th><th scope="col">Current online HTML</th></tr>
               </thead>
