--- a/demo/index.html
+++ b/demo/index.html
@@ -34,7 +34,6 @@
         <h1>Before and after</h1>
         <div class="reading-width">
           <p>Compare business paper PDFs and web pages developed in the summer 2024 design update.</p>
-          <p><a href="#">Find out more about this item</a></p>
         </div>
     </div>
   </div>
@@ -49,7 +48,7 @@
             <p>In progress</p>
           <ul><li><a href="#heading-1">Order Paper</a></li></ul>
           <p>In development</p>
-          <ul><li><a href="#heading-2">Votes and Proceedings</a></li><li><a href="#heading-3">Call Lists</a></li><li><a href="#heading-4">Early Day Motions</a></li><li><a href="#heading-5">Future Day Orals</a></li></ul></div>
+          <ul><li><a href="#heading-2">Votes and Proceedings</a></li><li><a href="#heading-3">Questions Tabled</a></li><li><a href="#heading-4">Early Day Motions</a></li><li><a href="#heading-5">Future Day Orals</a></li></ul></div>
           <div id="op" class="section">
             <h2 id="heading-1">Order Paper</h2>
             <h3 class="heading-level-4">Notes:</h3>
@@ -121,15 +120,21 @@
           </br>
         </div>
           <div id="calllist" class="section">
-            <h2 id="heading-3">Call Lists</h2>
+            <h2 id="heading-3">Questions Tabled</h2>
             <p>In development</p>
              <!--
           <table class="table table-bordered table-responsive-md">  <thead class="thead-light">    <tr><th scope="col">Date</th>    <th scope="col">New HTML files</th>    <th scope="col">Original HTML files</th></tr>  </thead>  <tbody><tr><td>Wednesday 22 July 2020</td><td><a href="calllist200722.html">calllist200722.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm5801/cmagenda/calllist200722v01.html">calllist200722v01.html</a><br></td></tr><tr><td>Tuesday 21 July 2020</td><td><a href="calllist200721.html">calllist200721.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm5801/cmagenda/calllist200721v01.html">calllist200721v01.html</a><br></td></tr><tr><td>Monday 20 July 2020</td><td><a href="calllist200720.html">calllist200720.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm5801/cmagenda/calllist200720v01.html">calllist200720v01.html</a><br></td></tr><tr><td>Thursday 16 July 2020</td><td><a href="calllist200716.html">calllist200716.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm5801/cmagenda/calllist200716v01.html">calllist200716v01.html</a><br></td></tr><tr><td>Wednesday 15 July 2020</td><td><a href="calllist200715.html">calllist200715.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm5801/cmagenda/calllist200715v01.html">calllist200715v01.html</a><br></td></tr><tr><td>Tuesday 14 July 2020</td><td><a href="calllist200714.html">calllist200714.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm5801/cmagenda/calllist200714v01.html">calllist200714v01.html</a><br></td></tr></tbody></table> --></div></br>
           <div id="edm" class="section">
             <h2 id="heading-4">Early Day Motions</h2>
-            <p>In development</p>
-            <!--
-          <table class="table table-bordered table-responsive-md">  <thead class="thead-light">    <tr><th scope="col">Date</th>    <th scope="col">New HTML files</th>    <th scope="col">Original HTML files</th></tr>  </thead>  <tbody><tr><td>Tuesday 21 July 2020</td><td><a href="edm200721.html">edm200721.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/200721e01.html">200721e01.html</a><br></td></tr><tr><td>Monday 20 July 2020</td><td><a href="edm200720.html">edm200720.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/200720e01.html">200720e01.html</a><br></td></tr><tr><td>Thursday 16 July 2020</td><td><a href="edm200716.html">edm200716.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/200716e01.html">200716e01.html</a><br></td></tr><tr><td>Wednesday 15 July 2020</td><td><a href="edm200715.html">edm200715.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/200715e01.html">200715e01.html</a><br></td></tr><tr><td>Tuesday 14 July 2020</td><td><a href="edm200714.html">edm200714.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/200714e01.html">200714e01.html</a><br></td></tr><tr><td>Monday 13 July 2020</td><td><a href="edm200713.html">edm200713.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/200713e01.html">200713e01.html</a><br></td></tr><tr><td>Thursday 09 July 2020</td><td><a href="edm200709.html">edm200709.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/200709e01.html">200709e01.html</a><br></td></tr><tr><td>Wednesday 08 July 2020</td><td><a href="edm200708.html">edm200708.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/200708e01.html">200708e01.html</a><br></td></tr><tr><td>Tuesday 07 July 2020</td><td><a href="edm200707.html">edm200707.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/200707e01.html">200707e01.html</a><br></td></tr><tr><td>Monday 06 July 2020</td><td><a href="edm200706.html">edm200706.html</a><br></td><td><a href="https://publications.parliament.uk/pa/cm/cmedm/200706e01.html">200706e01.html</a><br></td></tr></tbody></table> --></br></div>
+            <table class="table table-bordered table-responsive-md">
+              <thead class="thead-light">
+                <tr><th scope="col">Date</th><th scope="col">New PDF design</th><th scope="col">Old PDF design</th><th scope="col">New HTML</th><th scope="col">Current online HTML</th></tr>
+              </thead>
+              <tbody>
+                <tr><td>2024-06-05</td><td><a target="_blank" href="https://assets.adobe.com/id/urn:aaid:sc:US:87d5b7db-1dab-45b7-9d7c-608c7196d60d?view=published">PDF link</a><br></td><td><a target="_blank" href="https://commonsbusiness.parliament.uk/Document/87983/Pdf?subType=Standard">PDF link</a><br></td><td><a href="">TBC</a><br></td><td><a href="">TBC</a><br></td></tr>
+              </tbody>
+            </table>
+          </br></div>
           <div id="fdo" class="section">
             <h2 id="heading-5">Future Day Orals</h2>
             <p></p>
