--- a/demo/index.html
+++ b/demo/index.html
@@ -55,7 +55,7 @@
               <li>New PDF files may include in-development review comments.</li>
             </ul>
             <div id="edm" class="section">
-              <h2 id="heading-4">Completes</h2>
+              <h2 id="heading-4">OP Part 1 Completes</h2>
               <table class="table table-bordered table-responsive-md" id="completes">
                 <thead class="thead-light">
                   <tr><th scope="col">Date</th><th scope="col">InDesign (concat)</th><th scope="col">PDF (concat)</th><th scope="col">Old design</th><th scope="col">New HTML</th><th scope="col">Current online HTML</th></tr>
